# legged_ws

./: .gitignore  calc_spawn_test.py  check_frames.py
src/arm_control/: CMakeLists.txt  arm_controller_plugins.xml  package.xml
src/arm_control/config/: arm_controller.yaml  dual_arm_controllers.yaml
src/arm_control/include/arm_control/: ArmController.h  ArmController_Follower.h  ArmController_Leader.h
src/arm_control/launch/: arm_control.launch  multi_arm_control.launch
src/arm_control/scripts/: plot_tracking.py
src/arm_control/src/: ArmController.cpp  ArmController_Follower.cpp  ArmController_Leader.cpp  object_state_publisher.cpp  object_target_publisher.cpp  traj_publisher_node.cpp
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/config/: joint_position_controllers.yaml
src/arm_description/launch/: gazebo_kuka.launch  load_lbr_iiwa_14_r820.launch  test_lbr_iiwa_14_r820.launch
src/arm_description/urdf/: dual_arm_shared_load.xacro  dual_lbr_iiwa_14_r820_macro.xacro  lbr_iiwa_14_r820.urdf  lbr_iiwa_14_r820.xacro  lbr_iiwa_14_r820_macro.xacro  rob2_lbr_iiwa_14_r820.urdf  rob2_lbr_iiwa_14_r820.xacro  single_arm_loader.xacro
src/arm_gazebo/: CMakeLists.txt  package.xml
src/arm_gazebo/launch/: arm_world.launch  dual_arm_shared.launch  multi_arm_world.launch  single_arm_leader_test.launch
src/arm_gazebo/worlds/: no_gravity.world
src/my_robot_controllers/: CMakeLists.txt  my_robot_controllers_plugins.xml  package.xml
src/my_robot_controllers/config/: controllers.yaml
src/my_robot_controllers/include/my_robot_controllers/: convert.h  funs.h  my_custom_controller.h  robot_follower.h  robot_leader.h  state.h
src/my_robot_controllers/launch/: load_controller.launch
src/my_robot_controllers/src/: convert.cpp  funs.cpp  my_custom_controller.cpp  robot_follower.cpp  robot_leader.cpp
