<?xml version="1.0"?>
<package format="2">
  <name>arm_gazebo</name>
  <version>0.0.0</version>
  <description>The arm_gazebo package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>arm_description</depend>
</package>
